--- a/HS2231A5/Views/Shared/_Layout.cshtml
+++ b/HS2231A5/Views/Shared/_Layout.cshtml
@@ -30,6 +30,32 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Genres", "Index", "Genre")</li>
+                    <li>@Html.ActionLink("Actors", "Index", "Actor")</li>
+                    <li>@Html.ActionLink("Shows", "Index", "Show")</li>
+                    <li>@Html.ActionLink("Episodes", "Index", "Episode")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Load Data <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Roles", "Index", "LoadData")</li>
+                            @{
+                                List<string> allowedRoles = new List<string> { "Admin", "Executive", "Coordinator", "Clerk" };
+                            }
+                            @if (allowedRoles.Any(role => userAccount.HasRoleClaim(role)))
+
+                            //userAccount.HasRoleClaim("Admin")
+                            //||userAccount.HasRoleClaim("Executive")
+                            //||userAccount.HasRoleClaim("Coordinator")
+                            //|| userAccount.HasRoleClaim("Clerk")
+                            //)
+                                {
+                                <li>@Html.ActionLink("Genres", "Genres", "LoadData")</li>
+                                <li>@Html.ActionLink("Actors", "Actors", "LoadData")</li>
+                                <li>@Html.ActionLink("Shows", "Shows", "LoadData")</li>
+                                <li>@Html.ActionLink("Episodes", "Episodes", "LoadData")</li>
+                                }
+                        </ul>
+                    </li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -47,7 +73,7 @@
                     any other source (including web sites) or distributed to other students.
                 </small>
             </p>
-            <p>&copy; StudentFirstName StudentLastName, StudentEmail@myseneca.ca, WEB524 Winter 2023</p>
+            <p>&copy; Hamit Sehjal, hsehjal@myseneca.ca, WEB524 Summer 2023</p>
         </footer>
     </div>
 
