--- a/HS2231A5/Views/Home/Index.cshtml
+++ b/HS2231A5/Views/Home/Index.cshtml
@@ -3,21 +3,45 @@
 }
 
 <div class="jumbotron">
-    <h1>Web App Project Template V2</h1>
-    <p class="lead">Security-aware and claims-based web app, with persistence. Design your own data model.</p>
-    <p><a href="http://go.microsoft.com/fwlink/?LinkId=301865" target="_blank" class="btn btn-primary btn-lg">More info &raquo;</a></p>
+    <h1 class="text-center">Show Bizz II</h1>
+    <p>
+        Effortlessly upload various media items, such as PDF documents, images, audio files, and videos while managing your production's operations under ONE PLATFORM!!
+    </p>
+
+    <p><a href="https://hsehjal-wa-web524-a6.azurewebsites.net/Actor" target="_blank" class="btn btn-primary btn-lg">Jump to see the Actors &raquo;</a></p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>About this template</h2>
-        <p>Includes security-aware features that we have covered recently.</p>
-        <p>Role claims are defined by a design model class, and initialized during the "load data" task.</p>
-        <p>This template also includes graceful error-handling. </p>
+    <div class="col-md-6">
+        <p>ShowBizz II concentrates its efforts on four key job titles to fulfill the requirements of this task:</p>
+        <ul>
+            <li><b>Executive</b> – Manages the talent acquisition and management process.</li>
+            <li><b>Coordinator</b> – Oversees or coordinates the work on a TV series.</li>
+            <li><b>Clerk</b> – Supports the coordinator and executive during the production of TV episodes.</li>
+            <li><b>Admin</b> – The software developer will configure the database and publish to Microsoft Azure.</li>
+        </ul>
+        <p>
+            ShowBizz II also offers extensive customization options, allowing you to tailor controls and create additional user accounts with customized roles and access levels according to your unique requirements. 
+
+        </p>
+        <p>Do the following <b>BEFORE</b> you attempt to register any new users:</p>
+        <ul>
+            <li>Configure user accounts and set the roles accordingly:</li>
+        </ul>
     </div>
-    <div class="col-md-4">
-        <h2>Do these tasks</h2>
-        <p>Do the following <b>BEFORE</b> you attempt to register any new users...</p>
-        <p>In the Manager class, in the LoadData() method, add the role claims that are needed in the app.</p>
+    <div class="col-md-6">
+        <h2 class="text-center">Test Show Bizz II</h2>
+
+        <p>Now you can play around with different accounts and see the different roles they have in the app:</p>
+        <ul>
+            <li><b>Admin</b> (admin@example.com) is configured with the <i>Admin</i> role claim. Password: <code>Password123!</code></li>
+            <li><b>Executive</b> (exec@example.com) is configured with the <i>Executive</i> and <i>Coordinator</i> role claims. Password: <code>Password123!</code></li>
+            <li><b>Coordinator</b> (coord@example.com) is configured with the <i>Coordinator</i> and <i>Clerk</i> role claims. Password: <code>Password123!</code></li>
+            <li><b>Clerk</b> (clerk@example.com) is configured with the <i>Clerk</i> role claim. Password: <code>Password123!</code></li>
+        
+        
+        </ul>
+        <p>Feel free to explore the app and experience the different roles!</p>
     </div>
+
 </div>
