--- a/HS2231A5/Views/Shared/_Layout.cshtml
+++ b/HS2231A5/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("HS2231A5", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Show Bizz II", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -34,6 +34,7 @@
                     <li>@Html.ActionLink("Actors", "Index", "Actor")</li>
                     <li>@Html.ActionLink("Shows", "Index", "Show")</li>
                     <li>@Html.ActionLink("Episodes", "Index", "Episode")</li>
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Load Data <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -43,11 +44,6 @@
                             }
                             @if (allowedRoles.Any(role => userAccount.HasRoleClaim(role)))
 
-                            //userAccount.HasRoleClaim("Admin")
-                            //||userAccount.HasRoleClaim("Executive")
-                            //||userAccount.HasRoleClaim("Coordinator")
-                            //|| userAccount.HasRoleClaim("Clerk")
-                            //)
                                 {
                                 <li>@Html.ActionLink("Genres", "Genres", "LoadData")</li>
                                 <li>@Html.ActionLink("Actors", "Actors", "LoadData")</li>
@@ -56,6 +52,11 @@
                                 }
                         </ul>
                     </li>
+                    @{ if (userAccount.HasRoleClaim("Admin"))
+                            {
+                            <li>@Html.ActionLink("Delete Data", "DeleteData", "LoadData")</li>
+                            }
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -64,16 +65,13 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="text-center">
             <p>
                 <small>
-                    By submitting this assignment you agree to the following:
-                    I declare that this assignment is my own work in accordance with the Seneca Academic
-                    Policy. No part of this assignment has been copied manually or electronically from
-                    any other source (including web sites) or distributed to other students.
+                    Show Bizz II serve the needs of companies in the television business. This app enables a production company to manage their actors, TV series, and episodes.
                 </small>
             </p>
-            <p>&copy; Hamit Sehjal, hsehjal@myseneca.ca, WEB524 Summer 2023</p>
+            <p><span class="lead">&copy; Hamit Sehjal - ShowBizz II 2023</span></p>
         </footer>
     </div>
 
